# acquire-video-runtime

./: .gitmodules  .tokeignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: auto-merge.yml  nightly-release.yml  nightly-tag.yml  release.yml  test_pr.yml  update_downstream_repos.yml
cmake/: coverage.cmake  git-versioning.cmake  ide.cmake  install-prefix.cmake  msvc.cmake  simd.cmake  wsl.cmake
src/: CMakeLists.txt  acquire.c  acquire.h
src/runtime/: channel.c  channel.h  filter.c  filter.h  frame_iterator.c  frame_iterator.h  sink.c  sink.h  source.c  source.h  throttler.c  throttler.h  vfslice.c  vfslice.h  video.h
tests/: CMakeLists.txt  abort-or-stop.cpp  change-external-metadata.cpp  change-file-name.cpp  client-queue-is-flushed-after-abort.cpp  configure-after-shutdown-and-reinitialize.cpp  device-selection.cpp  filter-video-average.cpp  instance-stage-axis.cpp  list-devices.cpp  no-abort-on-dropped-frames.cpp  one-video-stream.cpp  repeat-start-no-stop.cpp  repeat-start.cpp  storage-crash-error-handling.cpp  two-video-streams.cpp  unit-tests.cpp  write-side-by-side-tiff.cpp  zero-config-start.cpp
